Removing a Grease Pencil Object's Material Slot deletes the strokes assigned to it #65741

Closed
opened 2019-06-12 08:52:13 +02:00 by Sam Brubaker · 6 comments

version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-11 21:45, hash: d93a7290e5, type: Release
build date: 2019-06-11, 23:26:36
platform: Linux

This one is easy to reproduce:

  • Add a Grease Pencil Object (the Monkey will do)
  • Go to the object's material slots

Remove a slot used by a stroke

This deletes the slot AND the strokes! This cannot be intentional. Mesh Material Slots do not behave this way, and neither should Grease Pencil Slots.

version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-11 21:45, hash: d93a7290e506, type: Release build date: 2019-06-11, 23:26:36 platform: Linux **This one is easy to reproduce:** - Add a Grease Pencil Object (the Monkey will do) - Go to the object's material slots # Remove a slot used by a stroke This deletes the slot AND the strokes! This cannot be intentional. Mesh Material Slots do not behave this way, and neither should Grease Pencil Slots.
Author

Added subscriber: @rocketman

Added subscriber: @rocketman
Antonio Vazquez was assigned by Brecht Van Lommel 2019-06-12 11:26:03 +02:00

Added subscribers: @mendio, @pepe-school-land

Added subscribers: @mendio, @pepe-school-land

Why not delete the strokes? If you remove the material is the same if you remove a layer.

This was a design decision of the GP Team, it's not a bug. Maybe, you have a different opinion, but this was decided after reviewing the subject carefully.

@mendio @pepe-school-land What do you think?

Why not delete the strokes? If you remove the material is the same if you remove a layer. This was a design decision of the GP Team, it's not a bug. Maybe, you have a different opinion, but this was decided after reviewing the subject carefully. @mendio @pepe-school-land What do you think?

Don't remember this was a decision @antoniov. Maybe this is legacy from the all color system.
For me this behavior is not correct, we should kept the strokes even if they do not have assigned material, same as meshes:

  • Assign all the strokes using the deleted material to the next material in the slot
  • If there is no material at all (empty material list) the stroke should use a SOLID BLACK material by default
Don't remember this was a decision @antoniov. Maybe this is legacy from the all color system. For me this behavior is not correct, we should kept the strokes even if they do not have assigned material, same as meshes: - Assign all the strokes using the deleted material to the next material in the slot - If there is no material at all (empty material list) the stroke should use a SOLID BLACK material by default

This issue was referenced by d788f5231e

This issue was referenced by d788f5231e81ae2be363f877d04ab93ddc396fa6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65741
No description provided.