Fix T65741: Removing a GPencil Object's Material Slot deletes the strokes assigned to it

This was a design decision, but now we have decided to change it using the active material for the strokes using deleted material.

If the material slot is empty a new material is created to keep the strokes visible.